objects/Floor_Map__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booth_Area__c</fullName>
        <label>Booth Area</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Location__c</fullName>
        <label>Booth Location</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Price__c</fullName>
        <label>Booth Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booth_Size__c</fullName>
        <label>Booth Size</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth__c</fullName>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>Floor Map</relationshipLabel>
        <relationshipName>Floor_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_Default__c</fullName>
        <label>By Default</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Floor Map</relationshipLabel>
        <relationshipName>Floor_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Select__c</fullName>
        <label>On Select</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>on_Hover__c</fullName>
        <label>on Hover</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Floor Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Floor Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floor Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>